# lorentz-gatr

./: #requirements.txt#  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements.txt~  requirements_minimal.txt  run.py  sweep.py  sweep_topt.py
.github/workflows/: ci.yaml  ci.yml  test_experiments.yaml  test_gatr.yaml
cgenn-master/: top_tagging.py  top_tagging_data.py
cgenn-master/data/: top_tagging.py
cgenn-master/models/: lorentz_cggnn.py
config/: amplitudes.yaml  amplitudes_gatr.yaml  amplitudes_mlp.yaml  amplitudes_mlp.yaml~  amplitudes_transformer.yaml  binaryjc.yaml  default.yaml  default_tagging.yaml  jctagging.yaml  massregression.yaml  qgtagging.yaml  toptagging.yaml  toptaggingft.yaml  transfertest.yaml  transfertestjc.yaml  transfertesttop.yaml  ttbar-onshell.yaml  ttbar.yaml  z5g.yaml  zmumu.yaml
config/classifier/: classifier.yaml
config/dnet/: gatr.yaml  mlp.yaml  transformer.yaml
config/jc_params/: JetClass.yaml
config/model/: cgenn_amplitudes.yaml  clsgatr_toptagging.yaml  clstr_amplitudes.yaml  dsi_amplitudes.yaml  dsmlp_amplitudes.yaml  equiburner_eventgen.yaml  gamlp_amplitudes.yaml  gap_amplitudes.yaml  gap_eventgen.yaml  gatr_amplitudes.yaml  gatr_eventgen.yaml  gatr_jctagging.yaml  gatr_qgtagging.yaml  gatr_tagging.yaml  gatr_toptagging.yaml  gatr_ttbar.yaml  jetgpt.yaml  (+11 more)
config_paper/: amplitudes.yaml  default.yaml  default_tagging.yaml  jctagging.yaml  qgtagging.yaml  toptagging.yaml  toptaggingft.yaml  ttbar.yaml  z5g.yaml  zmumu.yaml
data/: collect_data.py  data_config.yaml  download_data.py
experiments/: base_experiment.py  base_plots.py  logger.py  misc.py  mlflow.py
gatr/: __init__.py
pgatr/: __init__.py
tests_regression/: test_regression.py
(+227 files in other folders)
