[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lorentz-gatr"
version = "1.0.0"
description = "A versatile Lorentz-equivariant transformer for high-energy physics"
requires-python = ">=3.9,<=3.11" # newer versions have issues with numba/clifford
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Jonas Spinner", email = "j.spinner@thphys.uni-heidelberg.de"}]
dependencies = [
    "torch>=2.2",
    "numpy>=1.25,<=1.26.4",
    "einops",
    "opt_einsum",
    "xformers==0.0.24",
    "clifford>=1.4.0",
    "numba==0.58.1",
]

[project.urls]
homepage = "https://github.com/heidelberg-hepml/lorentz-gatr"
repository = "https://github.com/heidelberg-hepml/lorentz-gatr"

[tool.setuptools]
packages = ["gatr"]
